--- a/SchoolManagerApp/SchoolManagerApp.csproj
+++ b/SchoolManagerApp/SchoolManagerApp.csproj
@@ -125,6 +125,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Controllers\RoleController.cs" />
+    <Compile Include="src\Models\MockRole.cs" />
+    <Compile Include="src\Models\Role.cs" />
     <Compile Include="src\Service\BaseService.cs" />
     <Compile Include="src\Service\RoleService.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -151,8 +154,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="src\Controllers\" />
-    <Folder Include="src\Models\" />
     <Folder Include="src\Views\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
