--- a/SchoolManagerApp/App.config
+++ b/SchoolManagerApp/App.config
@@ -42,9 +42,11 @@
         <assemblyIdentity name="System.Numerics.Vectors" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.1.5.0" newVersion="4.1.5.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.1" newVersion="9.0.0.1" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <connectionStrings>
-    <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />
-  </connectionStrings>
-</configuration>
+
+<connectionStrings><add name="Models" connectionString="metadata=res://*/src.Model1.csdl|res://*/src.Model1.ssdl|res://*/src.Model1.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;USER ID=ADMIN;DATA SOURCE=localhost:1521/QL_NoiBo;TNS_ADMIN=C:\Users\thanhduy\Oracle\network\admin;PERSIST SECURITY INFO=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
