--- a/SchoolManagerApp/packages.config
+++ b/SchoolManagerApp/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="2.1.66" targetFramework="net472" />
   <package id="EntityFramework" version="6.5.1" targetFramework="net472" />
   <package id="FontAwesome.Sharp" version="6.6.0" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.1" targetFramework="net472" />
   <package id="Oracle.ManagedDataAccess" version="23.8.0" targetFramework="net472" />
   <package id="Oracle.ManagedDataAccess.EntityFramework" version="23.8.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net472" />
@@ -15,5 +16,4 @@
   <package id="System.Text.Json" version="8.0.5" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.6.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
-
 </packages>
