--- a/SchoolManagerApp/SchoolManagerApp.csproj
+++ b/SchoolManagerApp/SchoolManagerApp.csproj
@@ -6,7 +6,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{33C21E9A-EE62-40C4-B814-0A7D5E1BA4C6}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>SchoolManagerApp</RootNamespace>
     <AssemblyName>SchoolManagerApp</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -112,6 +112,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Controller\AuthController.cs" />
+    <Compile Include="src\Controller\UserController.cs" />
     <Compile Include="src\DANGKY.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -143,6 +144,7 @@
     <Compile Include="src\NHANVIEN.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="src\Service\UserService.cs" />
     <Compile Include="src\SINHVIEN.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -210,6 +212,7 @@
     <Compile Include="src\Views\UsersPage.Designer.cs">
       <DependentUpon>UsersPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="TestUserController.cs" />
     <EmbeddedResource Include="src\Views\controls\CTTextBox.resx">
       <DependentUpon>CTTextBox.cs</DependentUpon>
     </EmbeddedResource>
