--- a/SchoolManagerApp/SchoolManagerApp.csproj
+++ b/SchoolManagerApp/SchoolManagerApp.csproj
@@ -105,9 +105,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Controller\AuthController.cs" />
     <Compile Include="src\Controller\UserController.cs" />
+    <Compile Include="src\Models\DBA_TAB_PRIVS .cs" />
+    <Compile Include="src\Models\DBA_ROLES.cs" />
     <Compile Include="src\Models\UserRolePrivs.cs" />
     <Compile Include="src\utils\Error.cs" />
     <Compile Include="src\utils\ErrorMapper.cs" />
+    <Compile Include="src\Views\controls\CTButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="src\Views\controls\CTTextBoxIcon.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -139,19 +144,16 @@
     <Compile Include="src\Views\layout\Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
-    <Compile Include="src\Views\partials\createARoleForm.cs">
+    <Compile Include="src\Views\forms\createARoleForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="src\Views\partials\createARoleForm.Designer.cs">
+    <Compile Include="src\Views\forms\createARoleForm.Designer.cs">
       <DependentUpon>createARoleForm.cs</DependentUpon>
     </Compile>
     <Compile Include="src\Views\RolesPage.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\Views\controls\CTButton.cs">
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="src\Views\controls\CTTable.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -183,7 +185,7 @@
     <EmbeddedResource Include="src\Views\layout\Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="src\Views\partials\createARoleForm.resx">
+    <EmbeddedResource Include="src\Views\forms\createARoleForm.resx">
       <DependentUpon>createARoleForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="src\Views\RolesPage.resx">
@@ -205,6 +207,7 @@
     <EmbeddedResource Include="src\Views\partials\sidebar.resx">
       <DependentUpon>sidebar.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Oracle.DataAccess.Common.Configuration.Section.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -225,9 +228,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="src\MockModels\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
       <Visible>False</Visible>
