--- a/SchoolManagerApp/SchoolManagerApp.csproj
+++ b/SchoolManagerApp/SchoolManagerApp.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Controller\AuthController.cs" />
     <Compile Include="src\Controller\DangKyController.cs" />
+    <Compile Include="src\Controller\OLSController.cs" />
     <Compile Include="src\Controller\SinhVienController.cs" />
     <Compile Include="src\Controller\MomonController.cs" />
     <Compile Include="src\Controller\NhanVienController.cs" />
@@ -120,17 +121,20 @@
     <Compile Include="src\Models\DBA_TAB_PRIVS .cs" />
     <Compile Include="src\Models\DBA_ROLES.cs" />
     <Compile Include="src\Models\DBA_USERS.cs" />
-    <Compile Include="src\Models\Momon.cs" />
+    <Compile Include="src\Models\MoMon.cs" />
     <Compile Include="src\Models\Nhanvien.cs" />
     <Compile Include="src\Models\SinhVien.cs" />
+    <Compile Include="src\Models\ThongBao.cs" />
     <Compile Include="src\Service\DangKyService.cs" />
     <Compile Include="src\Service\DBA_PrivilegeService.cs" />
     <Compile Include="src\Service\MomonService.cs" />
     <Compile Include="src\Service\NhanVienService.cs" />
+    <Compile Include="src\Service\OLSService.cs" />
     <Compile Include="src\Test\TestMomonController.cs" />
     <Compile Include="src\Test\TestNhanVienController.cs" />
     <Compile Include="src\Service\SinhVienService.cs" />
     <Compile Include="src\Test\TestCau4.cs" />
+    <Compile Include="src\Test\TestOLS.cs" />
     <Compile Include="src\utils\Error.cs" />
     <Compile Include="src\utils\ErrorMapper.cs" />
     <Compile Include="src\Views\controls\CTButton.cs">
