--- a/SchoolManagerApp/SchoolManagerApp.csproj
+++ b/SchoolManagerApp/SchoolManagerApp.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Controller\AuthController.cs" />
     <Compile Include="src\Controller\DangKyController.cs" />
+    <Compile Include="src\Controller\OLSController.cs" />
     <Compile Include="src\Controller\SinhVienController.cs" />
     <Compile Include="src\Controller\MomonController.cs" />
     <Compile Include="src\Controller\NhanVienController.cs" />
@@ -125,7 +126,9 @@
     <Compile Include="src\Models\Momon.cs" />
     <Compile Include="src\Models\MOMON_HOCPHAN.cs" />
     <Compile Include="src\Models\NHANVIEN.cs" />
+    <Compile Include="src\Service\OLSService.cs" />
     <Compile Include="src\Models\SINHVIEN.cs" />
+    <Compile Include="src\Models\ThongBao.cs" />
     <Compile Include="src\Service\DangKyService.cs" />
     <Compile Include="src\Service\DBA_PrivilegeService.cs" />
     <Compile Include="src\Service\MomonService.cs" />
